@@ -4,7 +4,7 @@ org.gradle.daemon=false
 mod_id=rdslib
 mod_name=RDSLib
 mod_license=MIT
-mod_ver=4.0.3.1-SNAPSHOT-2
+mod_ver=4.0.3.1-SNAPSHOT-3
 mod_group_id=net.realdarkstudios
 mod_authors=RealDarkStudios/RDS
 mod_description=A library mod, primarily for RDS mods
