@@ -1,0 +1,21 @@
+package net.realdarkstudios.rdslib.item;
+
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeType;
+
+import javax.annotation.Nullable;
+
+public class FuelItem extends Item {
+    private int burnTime = 0;
+
+    public FuelItem(Properties pProperties, int burnTime) {
+        super(pProperties);
+        this.burnTime = burnTime;
+    }
+
+    @Override
+    public int getBurnTime(ItemStack itemStack, @Nullable RecipeType<?> recipeType) {
+        return this.burnTime;
+    }
+}
